cabal-version:       >= 2.0
name:                hexha
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              madjestic
maintainer:          madjestic13@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs:
                       src
  build-depends:
                       base                  ^>= 4.14
                     , aeson                 ^>= 1.5.6.0
                     , aeson-casing          ^>= 0.2.0.0
                     , bytestring            ^>= 0.10.8.2
                     , containers            ^>= 0.6.4.1
                     , cryptonite            >=0.24 && <0.28
                     , http-conduit          ^>= 2.3.8
                     , http-api-data          >=0.3 && <0.5
                     , http-client            >=0.5 && <0.7
                     , http-client-tls        >=0.3 && <0.4
                     , http-types            ^>= 0.12.3
                     -- , http-api-data         ^>= 0.4.2
                     , HUnit                 ^>= 1.6.2.0
                     , io-streams            >=1.5 && <1.6                 
                     -- , network               ^>= 3.1.2.1
                     , memory                >=0.14 && <0.16
                     , network               >=2.6 && <3.2
                     , stocks                ^>= 0.2.0.0
                     , text                  ^>= 1.2.4.1
                     , servant               ^>= 0.18.2
                     , servant-client        >=0.14 && <0.19
                     , servant-client-core   >=0.14 && <0.19
                     , time                  ^>= 1.9.3
                     , transformers          >=0.5 && <0.6
                     , unagi-streams         >=0.2 && <0.3
                     , uuid                  ^>= 1.3.15
                     , wuss                  >=1.1 && <1.2
                     , vector
                     , websockets            >=0.12 && <0.13
                     -- , bytestring           ^>= 0.10.8.2
                     -- , unordered-containers ^>= 0.2.8.0
                     -- , semigroups           ^>= 0.18.4
                     
  exposed-modules:
                       Utils
                     , Net.CoinbasePro.Authenticated.Headers
                     , Net.CoinbasePro.Authenticated.Request
                     , Net.CoinbasePro.Environment
                     , Net.CoinbasePro.Headers
                     , Net.CoinbasePro.MarketData.Types
                     , Net.CoinbasePro.Request
                     , Net.CoinbasePro.Types
                     , Net.CoinbasePro.WebSocketFeed
                     , Net.CoinbasePro.WebSocketFeed.Channel
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Activate
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Change
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Done
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Match
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Open
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Received
                     , Net.CoinbasePro.WebSocketFeed.Channel.Heartbeat
                     , Net.CoinbasePro.WebSocketFeed.Channel.Level2
                     , Net.CoinbasePro.WebSocketFeed.Channel.Status
                     , Net.CoinbasePro.WebSocketFeed.Channel.Ticker
                     , Net.CoinbasePro.WebSocketFeed.Request
                     , Net.CoinbasePro.WebSocketFeed.Response
                     , Net.IEX.Book
                     , Net.IEX.Chart
                     , Net.IEX.Company
                     , Net.IEX.DelayedQuote
                     , Net.IEX.Dividend
                     , Net.IEX.Earnings
                     , Net.IEX.EffectiveSpread
                     , Net.IEX.Financials
                     , Net.IEX.IntraDayStats
                     , Net.IEX.Market
                     , Net.IEX.NewsItem
                     , Net.IEX.OHLC
                     , Net.IEX.Previous
                     , Net.IEX.PriceTime
                     , Net.IEX.Quote
                     , Net.IEX.RecentStats
                     , Net.IEX.RecordStats
                     , Net.IEX.Relevant
                     , Net.IEX.Split
                     , Net.IEX.Stats
                     , Net.IEX.TimeSeries
                     , Net.IEX.VolumeByVenue
                     , Net.Stocks

  other-modules:
                       Paths_hexha
  default-language:
                       Haskell2010
                       
                       
executable hexha
  ghc-options:        -threaded -Wall -Wcompat -O2           
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base                  ^>= 4.14
                     , aeson                 ^>= 1.5.6.0
                     , aeson-casing          ^>= 0.2.0.0
                     , array                  >=0.5 && <0.6
                     , asciichart            ^>= 1.0.2
                     , brick                  
                     , bytestring            ^>= 0.10.8.2
                     , cassava               ^>= 0.5.2.0
                     , containers            ^>= 0.6.4.1
                     , cryptonite            >=0.24 && <0.28
                     , directory             ^>= 1.3.6.1
                     , http-api-data          >=0.3 && <0.5
                     , http-client            >=0.5 && <0.7
                     , http-client-tls        >=0.3 && <0.4
                     , http-streams           >=0.8 && <0.9
                     , http-types             >=0.12 && <0.13
                     , http-conduit          ^>= 2.3.8
                     , http-types            ^>= 0.12.3
                     , io-streams            >=1.5 && <1.6
                     , massiv                ^>= 0.6.0.0
                     , memory                >=0.14 && <0.16
                     , microlens             ^>= 0.4.12.0
                     , mtl                   ^>= 2.2.2
                     , network               >=2.6 && <3.2
                     , parallel              ^>= 3.2.2.0
                     , raw-strings-qq        ^>= 1.1
                     , servant               >=0.14 && <0.19
                     , servant-client        >=0.14 && <0.19
                     , servant-client-core   >=0.14 && <0.19
                     , strict                ^>= 0.4.0.1
                     , temporary             ^>= 1.3
                     , text
                     , transformers          >=0.5 && <0.6
                     , time                  ^>= 1.9.3
                     , unagi-streams         >=0.2 && <0.3
                     , uuid                  ^>= 1.3.15
                     , vector                 
                     , vty                    
                     , websockets            >=0.12 && <0.13
                     , wuss                  >=1.1 && <1.2
                     
  hs-source-dirs:      app
                     , src
  default-language:    Haskell2010
  other-modules:
                       Paths_hexha
                     , Net.CoinbasePro.Authenticated.Headers
                     , Net.CoinbasePro.Authenticated.Request
                     , Net.CoinbasePro.Environment
                     , Net.CoinbasePro.Headers
                     , Net.CoinbasePro.MarketData.Types
                     , Net.CoinbasePro.Request
                     , Net.CoinbasePro.Types
                     , Net.CoinbasePro.WebSocketFeed
                     , Net.CoinbasePro.WebSocketFeed.Channel
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Activate
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Change
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Done
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Match
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Open
                     , Net.CoinbasePro.WebSocketFeed.Channel.Full.Received
                     , Net.CoinbasePro.WebSocketFeed.Channel.Heartbeat
                     , Net.CoinbasePro.WebSocketFeed.Channel.Level2
                     , Net.CoinbasePro.WebSocketFeed.Channel.Status
                     , Net.CoinbasePro.WebSocketFeed.Channel.Ticker
                     , Net.CoinbasePro.WebSocketFeed.Request
                     , Net.CoinbasePro.WebSocketFeed.Response
                     , Net.IEX.Book
                     , Net.IEX.Chart
                     , Net.IEX.Company
                     , Net.IEX.DelayedQuote
                     , Net.IEX.Dividend
                     , Net.IEX.Earnings
                     , Net.IEX.EffectiveSpread
                     , Net.IEX.Financials
                     , Net.IEX.IntraDayStats
                     , Net.IEX.Market
                     , Net.IEX.NewsItem
                     , Net.IEX.OHLC
                     , Net.IEX.Previous
                     , Net.IEX.PriceTime
                     , Net.IEX.Quote
                     , Net.IEX.RecentStats
                     , Net.IEX.RecordStats
                     , Net.IEX.Relevant
                     , Net.IEX.Split
                     , Net.IEX.Stats
                     , Net.IEX.TimeSeries
                     , Net.IEX.VolumeByVenue
                     , Net.Stocks
                     , Data.Text.Chart